<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1024</width>
    <height>768</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Ignored" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="focusPolicy">
       <enum>Qt::NoFocus</enum>
      </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="tabMainLog">
       <attribute name="title">
        <string>Main Log</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
         <widget class="QTextEdit" name="textEditLog">
          <property name="readOnly">
           <bool>true</bool>
          </property>
          <property name="html">
           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
p, li { white-space: pre-wrap; }
&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
&lt;table border=&quot;0&quot; style=&quot;-qt-table-type: root; margin-top:4px; margin-bottom:4px; margin-left:4px; margin-right:4px;&quot;&gt;
&lt;tr&gt;
&lt;td style=&quot;border: none;&quot;&gt;
&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:600; color:#aa0000;&quot;&gt;MAIN LOG&lt;/span&gt;&lt;/p&gt;
&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Ubuntu'; font-size:11pt; font-weight:600; color:#aa0000;&quot;&gt;&lt;/p&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::TextBrowserInteraction</set>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1024</width>
     <height>23</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuMenu">
    <property name="title">
     <string>Menu</string>
    </property>
    <addaction name="actionAirmon_ng"/>
    <addaction name="actionCheck_Updates"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuOptions">
    <property name="title">
     <string>Options</string>
    </property>
    <addaction name="actionSet_Interface"/>
    <addaction name="actionMAC_Changer"/>
    <addaction name="actionGeneral_options"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
    <addaction name="actionAbout_QT"/>
    <addaction name="actionAbout_this_Program"/>
    <addaction name="actionAbout_Aircrack_ng"/>
   </widget>
   <addaction name="menuMenu"/>
   <addaction name="menuOptions"/>
   <addaction name="menuHelp"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionAirmon_ng">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/agt_softwareD.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>airmon-ng</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/exit.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>exit</string>
   </property>
  </action>
  <action name="actionSet_Interface">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/bookmark_toolbar.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>Set_Interface</string>
   </property>
  </action>
  <action name="actionMAC_Changer">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/Settings.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>MAC_Changer</string>
   </property>
  </action>
  <action name="actionAbout_QT">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/Nokia-QtCreator-64.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>About_QT</string>
   </property>
  </action>
  <action name="actionAbout_this_Program">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/documentinfo.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>About_this_Program</string>
   </property>
  </action>
  <action name="actionAbout_Aircrack_ng">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/documentinfo.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>About_Aircrack_ng</string>
   </property>
  </action>
  <action name="actionGeneral_options">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/Settings.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>General_options</string>
   </property>
  </action>
  <action name="actionCheck_Updates">
   <property name="icon">
    <iconset>
     <normalon>:/icons/icons/Update.png</normalon>
    </iconset>
   </property>
   <property name="text">
    <string>Check Updates</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>actionExit</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>344</x>
     <y>250</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
